# misc

./: .gitignore  Autonomous Software Stack.drawio  README.md  main.py
2D_inverse_controlled/: IK_main.py  NLinkArm.py
IK/: main.py
installation_scripts/easy_dep_downloader/: aptListDownloader.sh  apt_xavier.txt  aptlistCommands.txt  pipInstallUtil.sh  pip_xavier.txt  rospackage.txt  savePip.sh
ros/src/my_simulations/: package.xml
ros/src/my_simulations/launch/: my_world.launch
ros/src/my_simulations/world/: empty_world.world
ros/src/naro_description/: CMakeLists.txt  package.xml
ros/src/naro_description/config/: naro_control.yaml
ros/src/naro_description/rviz_config/: naro.rviz
ros/src/naro_description/urdf/: naro.urdf  naro_geometric.urdf
ros/src/rover_world/: CMakeLists.txt  package.xml
ros/src/rover_world/sim_world/: CMakeLists.txt  package.xml
ros/src/rover_world/sim_world/launch/: desert.launch
ros/src/rover_world/sim_world/meshes/: Control_armsFL.dae  Control_armsFR.dae  Control_armsFRv2.dae  J1.dae  J1v2.dae  chassis-w-baseplate.dae  tr_leg.dae
ros/src/rover_world/sim_world/meshes/Rover DAE stuff/: chassis_meters.dae
ros/src/rover_world/sim_world/models/arm_mode/: arm_mode.gazebo  arm_mode.xacro  macros.xacro  materials.xacro  parameter.xacro
ros/src/rover_world/sim_world/models/auto_mode/: auto_mode.gazebo  auto_mode.xacro  macros.xacro  parameter.xacro
ros/src/rover_world/sim_world/models/common_models/: common_models.gazebo  common_models.xacro
ros/src/rover_world/sim_world/worlds/: desert.world
(+7 files in other folders)
