<?xml version="1.0"?>
<package format="2">
  <name>sim_world</name>
  <version>0.0.0</version>
  <description>The sim_world package</description>

  <maintainer email="titanrover@todo.todo">titanrover</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>gazebo_ros</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" />
  </export>

</package>
